--- a/html serenos/supervisor.html
+++ b/html serenos/supervisor.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <title>Dashboard de Supervisores</title>
-    <div id="loadingOverlay">
-    
 
-
+    <!-- CSS -->
     <link rel="stylesheet" href="../css serenos/supervisor.css" />
 
     <!-- Librerías -->
@@ -15,14 +13,20 @@
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
+
+    <!-- Leaflet (OpenStreetMap) -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 </head>
 
 <body>
 
+<!-- HEADER -->
 <header class="top-header">
-      <button onclick="window.location.href='../index.html'" class="btn-regresar">
-    ⬅ Regresar
+    <button onclick="window.location.href='../index.html'" class="btn-regresar">
+        ⬅ Regresar
     </button>
+
     <div class="titulo">COMPORTAMIENTO DE SUPERVISORES</div>
 
     <div class="controls">
@@ -34,6 +38,7 @@
     </div>
 </header>
 
+<!-- CONTENIDO -->
 <div class="contenedor">
 
     <!-- 1️⃣ Ranking Supervisores -->
@@ -53,19 +58,14 @@
     </div>
 
     <!-- 3️⃣ Sector x Supervisor -->
-    <!-- 📋 Reporte por Sector -->
-
     <div class="card full">
-        <h2> Detalle de Escaneos por Sector</h2>
-
-        <!-- Aquí se generará la tabla dinámicamente -->
+        <h2>Detalle de Escaneos por Sector</h2>
         <div id="sectorTableContainer"></div>
     </div>
 
-
-    <!-- 4️⃣ Evolución -->
+    <!-- 4️⃣ Evolución diaria -->
     <div class="card full">
-        <h2> Evolución diaria por Supervisor</h2>
+        <h2>Evolución diaria por Supervisor</h2>
 
         <div style="padding-bottom:5px; font-size:.85rem;">
             <label>Supervisor:</label>
@@ -75,11 +75,72 @@
         <div class="chart-box">
             <canvas id="chartEvolucion"></canvas>
         </div>
-     <div id="exportLoading">Exportando...</div>
+    </div>
 
+    <!-- 5️⃣ MAPA - Comportamiento de escaneos -->
+    <div class="card full">
+        <h2>Comportamiento de escaneos</h2>
+
+        <div class="map-controls">
+
+            <div class="mc-item">
+                <label>Supervisor</label>
+                <select id="mapSupervisorSelect">
+                    <option value="">Seleccione supervisor</option>
+                </select>
+            </div>
+
+            <div class="mc-item">
+                <label>Tiempo</label>
+                <select id="mapTipoTiempo">
+                    <option value="">Seleccione</option>
+                    <option value="MES">Mes</option>
+                    <option value="DIA">Día</option>
+                </select>
+            </div>
+
+            <div class="mc-item" id="mapMesBox" style="display:none;">
+                <label>Mes</label>
+                <select id="mapMesSelect">
+                    <option value="">Seleccione mes</option>
+                </select>
+            </div>
+
+            <div class="mc-item" id="mapDiaBox" style="display:none;">
+                <label>Día</label>
+                <input type="date" id="mapDiaInput" />
+            </div>
+
+        </div>
+        <div class="map-box">
+
+        <!-- INFO FLOTANTE DENTRO DEL MAPA -->
+        <div id="mapInfoBox" class="map-info-box">
+            <b>Total:</b> 0<br>
+            Sector 01: 0<br>
+            Sector 02: 0<br>
+            Sector 03: 0<br>
+            Sector 04: 0<br>
+            Sector 05: 0<br>
+            FZ: 0
+        </div>
+
+        <!-- MAPA -->
+        <div id="mapScaneos" style="width:100%; height:100%;"></div>
+
+    </div>
+
+
+
+    </div>
 
 </div>
 
+<!-- LOADING EXPORT -->
+<div id="exportLoading">Exportando...</div>
+
+<!-- JS -->
 <script src="../js-serenos/supervisor.js"></script>
+
 </body>
 </html>
